// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-share> Component basic usage 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <bolt-copy-to-clipboard>
                  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
                    <button class="c-bolt-copy-to-clipboard__trigger"
                            data-clipboard-text="https://boltdesignsystem.com"
                    >
                      <span class="c-bolt-share__link">
                        <bolt-icon name="asset-link"
                                   size="medium"
                        >
                          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
                            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 24 24"
                            >
                              <g fill="none"
                                 fill-rule="evenodd"
                              >
                                <path fill="var(--bolt-theme-icon, currentColor)"
                                      d="M22.734 3.2l-1.929-1.927C19.996.428 18.986 0 17.805 0c-1.174 0-2.178.393-2.999 1.18l-2.05 2.096c-.276.253-.419.535-.426.84-.007.31.131.61.41.889a1.2 1.2 0 001.714 0l2.07-2.07c.327-.327.781-.476 1.27-.467.537.012.96.179 1.292.512l1.947 1.947c.351.328.521.742.521 1.268 0 .533-.16.95-.489 1.28l-6.524 6.526c-.369.367-.848.565-1.468.603-.604.036-1.017-.098-1.319-.423l-.804-.804-.668-.668c-.28-.303-.575-.447-.902-.446a1.063 1.063 0 00-.795.406c-.3.254-.456.54-.463.852-.006.319.143.622.433.888l1.453 1.454.027.307h.342c.698.57 1.557.858 2.556.858.054 0 .108-.001.161-.003.94-.028 1.781-.294 2.506-.79l.09.089.34-.34c.028-.03.068-.076.118-.144l6.684-6.658C23.607 8.372 24 7.368 24 6.195c0-1.181-.429-2.19-1.266-2.994m-11.47 15.714c.313.308.45.604.45.915 0 .31-.137.607-.41.88l-2.056 2.054C8.424 23.59 7.432 24 6.285 24c-1.144 0-2.149-.408-2.988-1.213L1.22 20.71C.41 19.864 0 18.859 0 17.715c0-1.147.41-2.14 1.22-2.95l6.795-6.794a4.035 4.035 0 012.95-1.221c1.147 0 2.14.41 2.95 1.22l1.574 1.576c.271.227.427.514.433.825.006.319-.143.622-.447.902-.47.474-1.242.443-1.7-.013L12.2 9.685c-.662-.663-1.765-.658-2.484.012L2.934 16.48a1.775 1.775 0 00-.489 1.258c0 .487.16.883.49 1.213l2.114 2.115c.663.662 1.764.657 2.484-.012l2.054-2.1c.15-.15.413-.324.837-.324.322 0 .604.096.84.285"
                                      mask="url(#mask-2)"
                                >
                                </path>
                              </g>
                            </svg>
                          </span>
                        </bolt-icon>
                        <span class="c-bolt-share__link-text">
                          Copy share link
                        </span>
                      </span>
                    </button>
                    <span class="c-bolt-copy-to-clipboard__transition">
                      <span class="c-bolt-share__link">
                        <bolt-icon class="c-bolt-share__copy-animation"
                                   name="refresh"
                                   size="medium"
                        >
                          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
                            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 24 24"
                            >
                              <g fill="none"
                                 fill-rule="evenodd"
                              >
                                <path>
                                </path>
                                <g fill="var(--bolt-theme-icon, currentColor)"
                                   fill-rule="nonzero"
                                >
                                  <path d="M24 4.5c0-.55-.45-1-1-1s-1 .45-1 1v3.687l-2.944-2.769a9.939 9.939 0 00-7.062-2.919 9.9 9.9 0 00-5.806 1.863 10.09 10.09 0 00-3.619 4.8 1 1 0 001.881.681 8.164 8.164 0 012.9-3.85 7.923 7.923 0 014.644-1.494c2.138 0 4.15.831 5.656 2.344a.094.094 0 00.025.019l2.8 2.631H17c-.55 0-1 .45-1 1s.45 1 1 1h6.099a.86.86 0 00.262-.063.969.969 0 00.369-.25.984.984 0 00.206-.331c0-.006 0-.006.006-.012v-.006-.006-.006-.006c0-.006 0-.006.006-.012.025-.075.044-.162.05-.244v-.006-.006-.012-.012-.012-.006-6L24 4.5zM20.813 14.625a1 1 0 00-1.281.6 8.035 8.035 0 01-7.525 5.275 7.93 7.93 0 01-5.656-2.344c-.006-.006-.012-.012-.025-.019l-2.8-2.637h3.475c.55 0 1-.45 1-1s-.45-1-1-1h-6a.975.975 0 00-.425.094s-.006 0-.006.006c0 0-.006 0-.006.006-.006 0-.006.006-.012.006a1.16 1.16 0 00-.225.156l-.006.006s-.006 0-.006.006l-.006.006-.006.006-.006.006c-.025.025-.044.05-.069.075a.866.866 0 00-.125.206c0 .006 0 .006-.006.012 0 0 0 .006-.006.006v.012s0 .006-.006.006c-.038.1-.063.213-.069.325v6.042c0 .55.45 1 1 1s1-.45 1-1v-3.687l2.944 2.769a9.939 9.939 0 007.062 2.919c4.194 0 7.975-2.65 9.406-6.594a1.008 1.008 0 00-.612-1.269l-.003.005z">
                                  </path>
                                </g>
                              </g>
                            </svg>
                          </span>
                        </bolt-icon>
                      </span>
                    </span>
                    <span class="c-bolt-copy-to-clipboard__confirmation">
                      <div class="c-bolt-share__link">
                        <bolt-icon name="check"
                                   size="medium"
                        >
                          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
                            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 24 24"
                            >
                              <g fill="none"
                                 fill-rule="evenodd"
                              >
                                <path>
                                </path>
                                <path fill="var(--bolt-theme-icon, currentColor)"
                                      d="M19.292 6.29L8.998 16.584 4.703 12.29a1.004 1.004 0 00-1.412 0 1.002 1.002 0 000 1.413l5 5a.995.995 0 001.411 0l11-11a.99.99 0 000-1.413 1.001 1.001 0 00-1.41 0z"
                                >
                                </path>
                              </g>
                            </svg>
                          </span>
                        </bolt-icon>
                        <span class="c-bolt-share__link-text">
                          Copied!
                        </span>
                      </div>
                    </span>
                  </span>
                </bolt-copy-to-clipboard>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: center 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="center"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="center"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-center c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: end 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="end"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="end"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-end c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: start 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 20 1`] = `
<bolt-share size="medium"
            opacity="20"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-20">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 40 1`] = `
<bolt-share size="medium"
            opacity="40"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-40">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 60 1`] = `
<bolt-share size="medium"
            opacity="60"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-60">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 80 1`] = `
<bolt-share size="medium"
            opacity="80"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-80">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 100 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share size: medium 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--medium">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="medium"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share size: small 1`] = `
<bolt-share size="small"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="xsmall"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <span class="c-bolt-share__label c-bolt-share__label--small">
                  Share this page
                </span>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--facebook"
                   href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
                   target="_blank"
                >
                  <bolt-icon name="facebook-solid"
                             size="small"
                  >
                    <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--small">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 32"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-3.92V19.6h4.15l.62-4.83h-4.77v-3.08c0-1.4.38-2.34 2.4-2.34h2.54V5a33.75 33.75 0 00-3.71-.19c-3.69 0-6.23 2.25-6.23 6.38v3.56h-4.16v4.85h4.16V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Facebook
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--twitter"
                   href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
                   target="_blank"
                >
                  <bolt-icon name="twitter"
                             size="small"
                  >
                    <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--small">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 26"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M32 3.09a13.94 13.94 0 01-3.29 3.39v.85C28.73 16 22.13 26 10.07 26A18.51 18.51 0 010 23.05a13.82 13.82 0 001.58.08 13.14 13.14 0 008.15-2.8 6.58 6.58 0 01-6.14-4.55 8.52 8.52 0 001.24.1 7.07 7.07 0 001.73-.22A6.56 6.56 0 011.3 9.22v-.08a6.55 6.55 0 003 .83 6.58 6.58 0 01-2-8.77 18.64 18.64 0 0013.53 6.86 7.41 7.41 0 01-.17-1.5A6.56 6.56 0 0122.15 0a6.49 6.49 0 014.79 2.08A13.07 13.07 0 0031.11.49a6.56 6.56 0 01-2.89 3.61 13 13 0 003.78-1z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Twitter
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <a class="c-bolt-share__link js-bolt-share__link--linkedin"
                   href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="linkedin"
                             size="small"
                  >
                    <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--small">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                           xmlns="http://www.w3.org/2000/svg"
                           data-name="Layer 1"
                           viewbox="0 0 32 31"
                      >
                        <path fill="var(--bolt-theme-icon, currentColor)"
                              d="M7.27 9.94v20.64H.4V9.94zm.44-6.38a3.56 3.56 0 01-3.88 3.56A3.57 3.57 0 113.87 0a3.55 3.55 0 013.84 3.56zM32 18.75v11.83h-6.85v-11c0-2.77-1-4.67-3.48-4.67a3.75 3.75 0 00-3.52 2.5 5.12 5.12 0 00-.23 1.69v11.48h-6.86c.09-18.71 0-20.64 0-20.64h6.86v3h-.05a6.81 6.81 0 016.23-3.48c4.53 0 7.9 3 7.9 9.29z"
                        >
                        </path>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    LinkedIn
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <a class="c-bolt-share__link js-bolt-share__link--email"
                   href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
                   target="_blank"
                >
                  <bolt-icon name="email"
                             size="small"
                  >
                    <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--small">
                      <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 24 24"
                      >
                        <g fill="none"
                           fill-rule="evenodd"
                        >
                          <path>
                          </path>
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M20 19H4c-.55 0-1-.45-1-1V7.919l8.425 5.9c.175.119.375.181.575.181.2 0 .4-.063.575-.181L21 7.919V18c0 .55-.45 1-1 1zM4 5h16c.394 0 .731.225.894.556L12 11.781 3.106 5.556A.99.99 0 014 5zm19 .981A3.004 3.004 0 0020 3H4a3 3 0 00-3 2.981V18c0 1.656 1.344 3 3 3h16c1.656 0 3-1.344 3-3V5.981z"
                          >
                          </path>
                        </g>
                      </svg>
                    </span>
                  </bolt-icon>
                  <span class="c-bolt-share__link-text">
                    Email
                  </span>
                </a>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </div>
</bolt-share>
`;
